src/renderer/features/workbench/pages/detected/pages/Editor/Editor.scss
#editor {
  display: grid;
  height: 100%;

  .app-header {
    padding-bottom: 0;
  }

  .app-content {

  }
}

.match-title {
  margin-bottom: 10px;

  .header-subtitle {
    text-transform: none;
    font-size: 28px;
  }
}

.match-info-header {
  margin-bottom: 10px;

  .content {
   // display: flex;
    justify-content: space-between;
    flex-direction: row;
    padding: 0;
    height: 100%;
    align-items: center;

    @media screen and (max-width: $default-width) {

    }

  }
}
.content {
  width: 100%;
  margin-bottom: 15px;
  position: relative;
}

.match-info-default-container {
  display: grid;
  grid-template-columns: calc(50% - 7px) calc(50% - 7px);
  grid-gap: 10px;
  overflow-y: auto;
  max-height: 160px;

  @media screen and (max-width: 1100px) {
   grid-template-columns: 100%;
    .match-card {
      margin: 0;
    }
  }
}
.info-files {
  margin-top: 10px;
  display: grid;
  grid-template-columns: calc(50% - 10px) 50%;;
  grid-gap: 10px;
}

.editors {
  display: grid;
  overflow-y: visible !important;

  &.diff-view {
    grid-template-columns: calc(50% - 10px) 50%;;
    grid-gap: 10px;
  }

  .editor {
    height: 100%;
    display: flex;
    flex-direction: column;

    #viewer {
      display: grid;
      height: 100%;
      width: 100%;
    }

    .file-loader {
      margin: auto;
      font-size: 12px;
    }

    .line-highlight {
      background: rgba(52, 59, 36, 0.73);
    }

    .editor-widget.find-widget.reduced-find-widget.visible {
      z-index: 6;
    }

    .monaco-editor, .monaco-editor .overflow-guard {
      border-radius: 4px;
    }
  }

  #NoLocalFile {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    justify-content: center;
    align-items: center;

    p {
      margin-top: 10px;
      margin-bottom: 35px;
      font-weight: 400;
      text-align: center;
      max-width: 300px;
    }
  }
}

